Fix horizontal scrollbar always being on screen

--- a/components/MiniProjectCard.module.css
+++ b/components/MiniProjectCard.module.css
@@ -24,7 +24,6 @@
   background-color: gray;
   opacity: 50%;
   height: 100vh;
-  width: 100vw;
   top: 0;
   left: 0;
   z-index: 3;
