--- a/components/Nav.module.css
+++ b/components/Nav.module.css
@@ -1,6 +1,5 @@
 .navbar_style {
   background-color: #fcfcf9;
-  width: 100vw;
   height: 100px;
   display: flex;
   align-items: center;
@@ -56,7 +55,6 @@
   color: black;
 }
 .footer_style {
-  width: 100vw;
   height: 200px;
 }
 .built_with {
